--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,25 +19,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/player/run/player-run-1.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/", "res://assets/player/", "res://assets/player/run/")
+dock_filesystem_selected_paths=PackedStringArray("res://cactus.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://player.tscn")
-current_scene="res://player.tscn"
+open_scenes=PackedStringArray("res://main.tscn", "res://powerup.tscn", "res://cactus.tscn")
+current_scene="res://cactus.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=9
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://player.gd"]
-selected_script="res://player.gd"
+open_scripts=["res://cactus.gd", "res://coin.gd", "res://Main.gd", "res://player.gd", "res://powerup.gd"]
+selected_script="res://cactus.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
