--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://cactus.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://README.md")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -27,8 +27,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main.tscn", "res://powerup.tscn", "res://cactus.tscn")
-current_scene="res://main.tscn"
+open_scenes=PackedStringArray("res://cactus.tscn")
+current_scene="res://cactus.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=0
@@ -36,8 +36,8 @@ selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://cactus.gd", "res://coin.gd", "res://Main.gd", "res://player.gd", "res://powerup.gd"]
-selected_script="res://Main.gd"
+open_scripts=[]
+selected_script=""
 open_help=[]
 script_split_offset=70
 list_split_offset=0
